# stellars-finance

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
bindings/config-manager/: README.md  package.json
bindings/config-manager/src/: index.ts
bindings/faucet-token/: README.md  package.json
bindings/faucet-token/src/: index.ts
bindings/liquidity-pool/: README.md  package.json
bindings/liquidity-pool/src/: index.ts
bindings/market-manager/: README.md  package.json
bindings/market-manager/src/: index.ts
bindings/oracle-integrator/: README.md  package.json
bindings/oracle-integrator/src/: index.ts
bindings/position-manager/: README.md  package.json
bindings/position-manager/src/: index.ts
contracts/: Cargo.toml  README.md
contracts/contracts/oracle-integrator/: Cargo.toml
contracts/contracts/oracle-integrator/src/: lib.rs  test.rs
contracts/contracts/oracle-integrator/test_snapshots/test/: test_contract_initialization.1.json  test_get_price_consistent_across_assets.1.json  test_multiple_markets_independent_prices.1.json  test_price_oscillation_pattern.1.json  test_simulated_prices_vary_over_time.1.json  test_test_mode_disabled_by_default.1.json  test_test_mode_enables_simulation.1.json
contracts/tests/: Cargo.toml  integration.rs
deployments/: testnet.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
frontend/src/: App.tsx  index.css
scripts/: build-contracts.sh  config.ts  deploy.ts  generate-bindings.sh  initialize.ts
(+159 files in other folders)
