[package]
name = "oracle-integrator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.0.2"
# sep-40-oracle = "0.1.1" # TODO: Re-enable when implementing real Reflector integration

[dev-dependencies]
soroban-sdk = { version = "23.0.2", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
